# BoscoHo

./: .gitignore  404.html  feed.xml  index.html  pyproject.toml  requirements.txt  rxconfig.py  sitemap-0.xml
.github/workflows/: main.yml
404/: index.html
BoscoHo/: BoscoHo.py
BoscoHo/blog_pages/: blog_data.py  blog_post.py
BoscoHo/components/: layout_metrics.py  nav_bar.py  sidebar.py
BoscoHo/examples/: __columns_with_nav_bar.py
BoscoHo/pages/: about.py  coding.py  hkscs.py  index.py  projects.py
BoscoHo/templates/: template.py
_next/static/3Mhgtx0PH3PsHZt2oy7Qy/: _buildManifest.js
_next/static/6DzFQBPTPkfu0tLEEUjqS/: _buildManifest.js
_next/static/F5SrjNhEd9AzUyGfJhnQr/: _buildManifest.js
about/: index.html
assets/: feed.xml
assets/hkscs/: privacy.md
assets/privacy/: hkscs.md
blog/: 2024-04-23-nav-split-view-3-columns.md  2024-06-14-pinyin-diacritic-ipa-swift.md  2024-06-19-text-variant-preference-swiftui.md  2024-07-09-reflex-self-host-vercel.md
coding/: index.html
personal_web/: personal_web.py  styles.py
personal_web/blog/: _2024_navigation_split_view.py  blog_post.py  blog_post_1.py
personal_web/blog_pages/: blog_data.py  blog_post.py  blog_post_1.py
personal_web/components/: layout_metrics.py  nav_bar.py  sidebar.py  sidebar_right.py
personal_web/examples/: __columns_with_nav_bar.py
personal_web/pages/: about.py  coding.py  index.py  projects.py
personal_web/templates/: template.py
personal_web/utils/: md_metadata.py
projects/: index.html
projects/hk_characters/: index.html
projects/hkscs/: index.html
(+248 files in other folders)
