[project]
name = "boscoho"
version = "1.0.0"
dependencies = [
    "reflex>=0.5.4",
    "Markdown==3.6",
]
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["divingavran"]